[project]
name = "posixipc-image-transport"
version = "0.1.0"
description = "Fast shared memory transport for images and numpy arrays"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "posix-ipc>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ipc_transport.py"]

